# etl-airbyte-minio-clickhouse-dbt-airflow

./: Dockerfile  Dockerfile_fastapi  docker-compose.yml  pyproject.toml
airbyte/: custom_api_builder.yaml  france_departments_chunks.json
dags/: a_python_etl_dag.py  a_transform_dbt_clickhouse_dag.py  a_trigger_dagrun_dag.py  trigger_dagrun_dag.py
dbt_project/models/reporting_views/: dep_3d_bottom3_cloudcover.sql  dep_3d_bottom3_radiation.sql  dep_3d_bottom3_solarenergy.sql  dep_3d_bottom3_temperature.sql  dep_3d_top3_cloudcover.sql  dep_3d_top3_humidity.sql  dep_3d_top3_radiation.sql  dep_3d_top3_solarenergy.sql  dep_3d_top3_temperature.sql  dep_3d_top3_windspeed.sql  dep_bottom3_cloudcover_today.sql  dep_bottom3_temperature_today.sql  dep_top3_cloudcover_today.sql  dep_top3_humidity_today.sql  dep_top3_solarenergy_today.sql  dep_top3_temperature_today.sql  dep_top3_windspeed_today.sql  mart_next_3_days.sql  mart_next_3_days_stats.sql  mart_today.sql  mart_today_stats.sql  reg_3d_bottom3_cloudcover.sql  (+16 more)
dbt_project/seeds/: departements_france_selection.csv
project_functions/python/: clickhouse_client.py  clickhouse_crud.py  clickhouse_queries.py  etl.py  functions.py  minio_client.py  minio_utils.py  transform_airbyte_extract_data.py
project_functions/sql/: create_location_table.sql  create_python_extractor_table.sql
schemas/clickhouse/: raw_weather__schema.json
scripts/: department_code_builder.py  load_department_infos_to_clickhouse.py
tests/: test_data_quality.py
weather_api/: README.md  crud.py  database.py  main.py  models.py
(+5 files in other folders)
