[tool.poetry]
name = "weather-database-apirest"
version = "0.1.0"
description = "api rest and airflow project for weather database"
authors = ["donatien konan <donatien.konan.pro@gmail.com>"]
readme = "README.md"

packages = [
  {include="python", from="project_functions"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastparquet = "2024.2.0"
aiohttp = "^3.13.3"

[tool.poetry.group.airflow.dependencies]
pendulum = "*"
pytest = "*"
apache-airflow = {version = "2.10.3", extras = ["postgres", "airbyte"]}
dbt-core = "*"
pyarrow = "*"
pandas = "1.5.3"
pytest-mock = "^3.14.0"
dbt-clickhouse = "1.9.2"
apache-airflow-providers-amazon = "9.9.0"
minio = "^7.2.15" # MinIO Python SDK
shapely = "2.0.6"
sqlalchemy = "1.4.54"
#airflow-clickhouse-plugin = "1.4.0" need fab ==> auth.manager for airflow 3.x.x
fastparquet = "2024.2.0"

[tool.poetry.group.api.dependencies]
fastapi = "^0.116.1"
alembic = "^1.16.5"
clickhouse-sqlalchemy = "0.2.9"
sqlalchemy = "1.4.54"
pydantic = { version = "^2.11.7", extras = ["email"] }
logfire = "^4.6.0"
uvicorn = "^0.35.0"
pandas = "1.5.3"

[tool.poetry.group.dev.dependencies]
ipython = "8.8.0"
missingno = "0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
